# tvm-ffi-object-loader

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build.sh  example.py  pyproject.toml
examples/quick-start/: README.md  add.cc  compile.sh  run.py
include/tvm/ffi/object_loader/: orcjit_library.h
python/tvm_ffi_object_loader/: __init__.py  loader.py
src/ffi/: orcjit_library.cc
